# rbe500_group_project

./: .gitignore  RBE500-Gazebo.md  README.md  setup_env.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/rrbot_description/share/rrbot_description/: local_setup.bash  (+5 more)
log/: latest_build
rrbot_simulation_files/: setup_env.sh
rrbot_simulation_files/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
rrbot_simulation_files/log/: latest_build
rrbot_simulation_files/rrbot_description/gazebo/: rrbot.gazebo.xacro
rrbot_simulation_files/rrbot_description/urdf/: rrbot_description.urdf.xacro
rrbot_simulation_files/rrbot_gazebo/: CMakeLists.txt  package.xml
rrbot_simulation_files/rrbot_gazebo/install/: local_setup.sh  setup.sh
rrbot_simulation_files/rrbot_gazebo/log/: latest_build
rrbot_simulation_files/rrbot_gazebo/python_src/: CMakeLists.txt  forward_kinematics_node.py  inverse_kinematics_node.py  joint_effort_control_node.py  joint_pd_control_node.py  joint_velocity_control_node.py  robot_controller.py
rrbot_simulation_files/rrbot_gazebo/python_src/install/: local_setup.sh  setup.sh
rrbot_simulation_files/rrbot_gazebo/python_src/log/: latest_build
rrbot_simulation_files/rrbot_gazebo/python_src/py_srvcli/: package.xml  setup.py
rrbot_simulation_files/rrbot_gazebo/python_src/py_srvcli/py_srvcli/: client_member_function.py  service_member_function.py
rrbot_simulation_files/rrbot_gazebo/src/: controller_switch.cpp
rrbot_simulation_files/rrbot_gazebo/srv/: CartesianVelocityInput.srv  IKService.srv  JointVelocityInput.srv
(+223 files in other folders)
